--- a/index.html
+++ b/index.html
@@ -7,36 +7,27 @@
   <title>Coding Quiz</title>
   <link rel="stylesheet" href="style.css">
 </head>
-    <div id="header1" class="headers">
-      <h1>
-        Timer
-      </h1>
-    </div>
-
-    <div id="header2" class="headers">
-      <h1>
-        High Score
-      </h1>
-
-    </div>
+    
 
 <body>
-  <div id="quiz">
-    <p>
-      <ul>This is where the questions go. <br><br>
-      <input type="radio" name="option1" value="script" id="option-1">
-      <label for="option-1">Answer option 1</label><br>
+  <div class="headers container">
+    <h1 id="header1" class="header1">Timer</h1>
+    <h1 id="header2" class="header2">High Score</h1>
+  </div>
 
-      <input type="radio" name="option2" value="script" id="option-2">
-      <label for="option-2">Answer option 2</label><br>
-
-      <input type="radio" name="option3" value="script" id="option-3">
-      <label for="option-3">Answer option 3</label><br>
-
-      <input type="radio" name="option4" value="script" id="option-4">
-      <label for="option-4">Answer option 4</label><br>
-    </ul>
-    </p>
+  <div class="quiz" id="quiz">
+    <div id="question-container" class="hide">
+      <div id="question">Question:</div>
+      <div id="answers" class="button-grid">
+        <button class="button">Answer 1</button>
+        <button class="button">Answer 2</button>
+        <button class="button">Answer 3</button>
+        <button class="button">Answer 4</button>
+      </div>
+    </div>
+      <div class="starters">
+        <button id="start" class="start button">Start</button>
+      </div>
   </div>
 
   
