--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="headers container">
-    <h1 id="header1" class="header1">Timer</h1>
-    <h1 id="header2" class="header2">High Score</h1>
+    <h1 id="header1" class="header1">Time:</h1>
+    <h1 id="header2" class="header2">High Score:</h1>
   </div>
 
   <div class="quiz" id="quiz">
