--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
   <div class="quiz" id="quiz">
     <div id="question-container" class="hide">
       <div id="question">Question:</div>
-      <div id="answers" class="button-grid">
+
+      <div id="answers">
         <button class="button">Answer 1</button>
         <button class="button">Answer 2</button>
         <button class="button">Answer 3</button>
         <button class="button">Answer 4</button>
       </div>
-    </div>
-      <div class="starters">
-        <button id="start" class="start button">Start</button>
-      </div>
-  </div>
 
+    </div> 
+      <div class="starters" >
+        <button id="start" class="start">Start</button>
+    </div>
+  
+  </div>
   
   <script src= "script.js"></script>
 </body>
